[package]
name = "day-pieces"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
day-geometry = { workspace = true }
day-reactive = { workspace = true }
day-spec = { workspace = true }
day-core = { workspace = true }
# The core localization engine + built-in UI-string catalog (dialog buttons, menu-role labels).
day-l10n = { workspace = true }
# Re-exported so external pieces register per-backend renderers through the `renderer!` macro
# without depending on linkme (or day-spec's Renderer) directly.
linkme = { workspace = true }

[features]
# The dynamic piece registry (docs/lite.md §4): name-keyed constructors + modifiers with
# loosely-typed args, the surface day-lite's JS layer drives. Off by default — compiled
# apps pay nothing for it.
dyn-registry = []

[dev-dependencies]
day-mock = { workspace = true }
