[package]
name = "day-script"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
day-core = { workspace = true }
day-fluent = { workspace = true }
day-reactive = { workspace = true }
day-spec = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
