[package]
name = "day"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[features]
# Exactly one backend feature per binary (§3.2).
appkit = ["dep:day-appkit"]
gtk = ["dep:day-gtk"]
qt = ["dep:day-qt"]
uikit = ["dep:day-uikit"]
mdc = ["dep:day-android"]
winui = ["dep:day-winui"]
arkui = ["dep:day-arkui"]
mock = ["dep:day-mock"]

[dependencies]
day-geometry = { workspace = true }
day-reactive = { workspace = true }
day-spec = { workspace = true }
day-core = { workspace = true }
day-pieces = { workspace = true }
day-fluent = { workspace = true }
day-script = { workspace = true }
day-appkit = { workspace = true, optional = true }
day-gtk = { workspace = true, optional = true }
day-qt = { workspace = true, optional = true }
day-uikit = { workspace = true, optional = true }
day-android = { workspace = true, optional = true }
day-winui = { workspace = true, optional = true }
day-arkui = { workspace = true, optional = true }
day-mock = { workspace = true, optional = true }
