[package]
name = "day-part-clipboard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# A HEADLESS day-ecosystem crate (no UI Piece): a shared cross-platform API for the system's
# plain-text clipboard via each platform's NATIVE API. Any Rust code can depend on it and call
# `day_part_clipboard::{set_text, get_text, has_text}`. Platform selection is by `#[cfg(target_os)]`
# (the clipboard is an OS concern, not a widget-toolkit one), so there are no backend features — it
# "just works" per target:
#   macOS    — NSPasteboard (AppKit; toolkit-independent, works under day-qt binaries too)
#   iOS      — UIPasteboard
#   Windows  — Win32 OpenClipboard/CF_UNICODETEXT (raw FFI)
#   Linux    — wl-copy/wl-paste (Wayland) falling back to xclip (X11), via std::process
#   HarmonyOS— native libpasteboard.so + libudmf.so (BasicServicesKit), gated on target_env = "ohos"
#   Android  — ClipboardManager via a Java shim staged through [package.metadata.day.android]
# See docs/clipboard.md + docs/extending.md.

[dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSPasteboard"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }

[target.'cfg(target_os = "ios")'.dependencies]
objc2-ui-kit = { version = "0.3", features = ["UIPasteboard"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }

# Android reads ClipboardManager through a Java shim + day-android's cached JVM/Context. This is the
# one platform where the headless crate rides on the day runtime (like the pieces' Android backends).
[target.'cfg(target_os = "android")'.dependencies]
day-android = { workspace = true }

# --- Android backend contribution (docs/extending.md) ---
# The SAME mechanism the UI pieces use — but this crate registers NO renderer: `day build` stages
# this Java and adds it to the app's Gradle build, without touching any core day crate.
[package.metadata.day.android]
java = ["android/java"]
