[package]
name = "day-part-deviceinfo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# A HEADLESS day-ecosystem crate (no UI Piece): a shared cross-platform API for a snapshot of the
# device's identity (model, OS name/version, simulator flag) via each platform's NATIVE API. Any Rust
# code can depend on it and call `day_part_deviceinfo::get()`. Platform selection is by
# `#[cfg(target_os)]`/`#[cfg(target_env)]` (device identity is an OS concern, not a widget-toolkit one),
# so there are no backend features — it "just works" per target:
#   macOS    — ProcessInfo.operatingSystemVersion (objc2-foundation) + sysctl hw.model (libc)
#   iOS      — UIDevice model/systemName/systemVersion (objc2-ui-kit); simulator via target_abi/env
#   Windows  — RtlGetVersion (ntdll, raw FFI)
#   Linux    — /etc/os-release + DMI product_name (std only)
#   HarmonyOS— native libdeviceinfo_ndk.so (deviceinfo.h), gated on target_env = "ohos"
#   Android  — Build.* via a Java shim staged through [package.metadata.day.android]
# See docs/deviceinfo.md + docs/extending.md.

[dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSProcessInfo", "NSString"] }
libc = "0.2"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-ui-kit = { version = "0.3", features = ["UIDevice"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }

# Android reads Build.* through a Java shim + day-android's re-exported JVM. Build fields are static
# (no Context needed), but the crate still rides the Day runtime for its attached JNIEnv.
[target.'cfg(target_os = "android")'.dependencies]
day-android = { workspace = true }

# --- Android backend contribution (docs/extending.md) ---
# The SAME mechanism the UI pieces use — but this crate registers NO renderer: `day build` stages this
# Java into the app's Gradle build, with zero edits to any core day crate. No permission is required
# (android.os.Build fields are freely readable).
[package.metadata.day.android]
java = ["android/java"]
