[package]
name = "day-part-network"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

# A HEADLESS day-ecosystem crate (no UI Piece): a shared cross-platform API for reading a snapshot of
# the device's network connectivity via each platform's NATIVE API. Any Rust code can depend on it and
# call `day_part_network::status()`. Platform selection is by `#[cfg(target_os)]` (connectivity is an
# OS concern, not a widget-toolkit one), so there are no backend features — it "just works" per target:
#   macOS    — SCNetworkReachability (SystemConfiguration), shared file with iOS
#   iOS      — SCNetworkReachability (IsWWAN distinguishes cellular)
#   Windows  — GetNetworkConnectivityHint (iphlpapi, resolved dynamically; Windows 10 2004+)
#   Linux    — /sys/class/net interface scan
#   HarmonyOS— native libnet_connection.so (NetworkKit), gated on target_env = "ohos"
#   Android  — ConnectivityManager via a Java shim staged through [package.metadata.day.android]
# See docs/network.md + docs/extending.md.

[dependencies]

# macOS/iOS need no crates: src/apple.rs is plain-C FFI to the SystemConfiguration framework.

# Android reads ConnectivityManager through a Java shim + day-android's cached JVM/Context. This is the
# one platform where the headless crate rides on the day runtime (like the pieces' Android backends).
[target.'cfg(target_os = "android")'.dependencies]
day-android = { workspace = true }

# --- Android backend contribution (docs/extending.md) ---
# The SAME mechanism the UI pieces use — but this crate registers NO renderer: `day build` stages this
# Java into the app's Gradle build and merges the permission into the app manifest, without touching
# any core day crate.
[package.metadata.day.android]
java = ["android/java"]
# ConnectivityManager.getActiveNetwork/getNetworkCapabilities require ACCESS_NETWORK_STATE (a normal,
# install-time permission — no runtime prompt).
permissions = ["android.permission.ACCESS_NETWORK_STATE"]

# --- iOS backend contribution (docs/extending.md) ---
# SCNetworkReachability lives in SystemConfiguration.framework. src/apple.rs has a Rust
# `#[link(name = "SystemConfiguration", kind = "framework")]`, but that is honored only when cargo
# drives the final link (macOS desktop). On iOS, xcodebuild links the Rust staticlib and does NOT
# read Rust link metadata, so the app must link the framework itself — declared here and linked via
# the generated DayPieces SwiftPM package (resolve_ios scans every closure dep, part or piece).
[package.metadata.day.ios]
frameworks = ["SystemConfiguration"]
