[package]
name = "day-piece-activity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
build = "build.rs"

# A standalone Day Piece wrapping each toolkit's NATIVE indeterminate activity/loading spinner:
# NSProgressIndicator (Spinning) on AppKit, UIActivityIndicatorView on UIKit, GtkSpinner on GTK, a
# busy QProgressBar on Qt, android.widget.ProgressBar on Android, ProgressRing on WinUI. Like
# `day-piece-media`/`day-piece-picker`, it carries BOTH its cross-platform front-end (Rust) and its
# per-toolkit backend (objc2 / gtk-rs / C++ shim / Android Java) without touching any core day
# crate. See docs/extending.md + docs/activity.md.

[features]
# NSProgressIndicator (NSView subclass). NSCell carries NSControlSize for `.large`.
appkit = ["dep:day-appkit", "dep:objc2", "dep:objc2-app-kit"]
gtk = ["dep:day-gtk", "dep:gtk4"]
qt = ["dep:day-qt"] # + build.rs compiles src/lib-qt-shim.cpp (QProgressBar busy mode; Qt6Widgets, already linked by day-qt-sys)
uikit = ["dep:day-uikit", "dep:objc2", "dep:objc2-ui-kit"]
widget = ["dep:day-android"] # + [package.metadata.day.android] stages android/java/…/DayActivity.java
# WinUI: build.rs compiles src/lib-winui-shim.cpp (a ProgressRing boxed via day-winui-sys's
# day_winui_box seam, like the media/picker/webview winui pieces). mock has no renderer — its feature
# exists so apps can enable `day-piece-activity/mock` uniformly; the activity kind then falls back to
# day's placeholder leaf.
winui = ["dep:day-winui", "dep:day-winui-sys"]
mock = []

# Backends this piece carries a native-renderer [features] entry for. `day` unions `<pkg>/<backend>`
# into an app build (Tier A.2), so an app depends on this piece with a plain `{ workspace = true }` —
# no per-backend feature fan-out in its own Cargo.toml.
[package.metadata.day.piece]
backends = ["appkit", "gtk", "qt", "uikit", "widget", "winui", "mock"]

[dependencies]
day-spec = { workspace = true }
day-core = { workspace = true }
day-pieces = { workspace = true }
day-reactive = { workspace = true }
linkme = { workspace = true }
day-appkit = { workspace = true, optional = true }
day-gtk = { workspace = true, optional = true }
day-qt = { workspace = true, optional = true }
day-uikit = { workspace = true, optional = true }
day-android = { workspace = true, optional = true }
day-winui = { workspace = true, optional = true }
day-winui-sys = { workspace = true, optional = true }
gtk4 = { version = "0.11", optional = true }
objc2 = { version = "0.6", optional = true }
objc2-app-kit = { version = "0.3", optional = true, features = [
    "NSProgressIndicator",
    "NSView",
    "NSResponder",
    "NSCell",
] }
objc2-ui-kit = { version = "0.3", optional = true, features = [
    "UIActivityIndicatorView",
    "UIView",
    "UIResponder",
] }

[build-dependencies]
day-toolchain = { workspace = true }
cc = "1"

[dev-dependencies]
day-mock = { workspace = true }

# Standalone-piece Android contribution (docs/extending.md). The day CLI reads this from
# `cargo metadata` and folds it into the app's Gradle build — the piece carries its own backend Java
# without touching day-android or the scaffold. android.widget.ProgressBar is a framework widget,
# so no Gradle dependency or permission is required.
[package.metadata.day.android]
# Java source dir(s), relative to this crate root — added as Gradle `java.srcDir`s.
java = ["android/java"]
gradle-dependencies = []
gradle-repositories = []
permissions = []
