[package]
name = "day-piece-combobox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[features]
appkit = ["dep:day-appkit", "dep:objc2", "dep:objc2-app-kit", "dep:objc2-foundation"]
gtk = ["dep:day-gtk", "dep:gtk4"]
qt = ["dep:day-qt"]
uikit = ["dep:day-uikit", "dep:objc2", "dep:objc2-ui-kit", "dep:objc2-foundation", "dep:objc2-core-foundation"]
widget = ["dep:day-android"]
winui = ["dep:day-winui", "dep:day-winui-sys"]

# Backends this piece carries a native-renderer [features] entry for. `day` unions `<pkg>/<backend>`
# into an app build (Tier A.2), so an app depends on this piece with a plain `{ workspace = true }` —
# no per-backend feature fan-out in its own Cargo.toml.
[package.metadata.day.piece]
backends = ["appkit", "gtk", "qt", "uikit", "widget", "winui"]

[dependencies]
day-spec = { workspace = true }
day-core = { workspace = true }
day-pieces = { workspace = true }
day-reactive = { workspace = true }
linkme = { workspace = true }
day-appkit = { workspace = true, optional = true }
day-gtk = { workspace = true, optional = true }
day-qt = { workspace = true, optional = true }
day-uikit = { workspace = true, optional = true }
day-android = { workspace = true, optional = true }
day-winui = { workspace = true, optional = true }
day-winui-sys = { workspace = true, optional = true }
gtk4 = { version = "0.11", optional = true }
objc2 = { version = "0.6", optional = true }
objc2-app-kit = { version = "0.3", optional = true, features = ["NSPopUpButton", "NSButton", "NSControl", "NSView", "NSResponder", "NSMenu"] }
objc2-foundation = { version = "0.3", optional = true, features = ["NSString"] }
objc2-core-foundation = { version = "0.3", optional = true, features = ["CFCGTypes"] }
objc2-ui-kit = { version = "0.3", optional = true, features = ["UISegmentedControl", "UIControl", "UIView", "UIResponder"] }

[build-dependencies]
cc = "1"

[dev-dependencies]
day-mock = { workspace = true }
