[package]
name = "day-piece-combobox"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
build = "build.rs"

# An EXTERNAL Day Piece (DESIGN.md §15): a REAL combo box — free-form text entry plus a native
# dropdown of suggestions. NSComboBox / GtkComboBoxText-with-entry / an editable QComboBox /
# AutoCompleteTextView / an editable WinUI ComboBox. Bound TWO-WAY to a `Signal<String>` (the
# text IS the value; typing or picking sets the signal, a signal change patches the control) with
# a reactive `Signal<Vec<String>>` of suggestions. iOS has no native combo-box control, so this
# piece carries NO uikit renderer — day renders its placeholder leaf there. See docs/combobox.md.

[features]
appkit = ["dep:day-appkit", "dep:objc2", "dep:objc2-app-kit", "dep:objc2-foundation"]
gtk = ["dep:day-gtk", "dep:gtk4"]
qt = ["dep:day-qt"]                 # + build.rs compiles src/lib-qt-shim.cpp (editable QComboBox), Qt libs linked by day-qt-sys
mdc = ["dep:day-android"]        # + [package.metadata.day.android] carries the DayCombo Java factory
# WinUI: build.rs compiles src/lib-winui-shim.cpp (an editable ComboBox boxed via day-winui-sys's
# day_winui_box seam, like the searchfield winui piece). Windows-only, built in CI, not verified
# locally. mock has no renderer — its feature exists so apps can enable `day-piece-combobox/mock`
# uniformly; the combobox kind then falls back to day's placeholder leaf (as it does on uikit,
# which has no feature at all: iOS has no native combo-box control).
winui = ["dep:day-winui", "dep:day-winui-sys"]
mock = []

# Backends this piece carries a native-renderer [features] entry for. `day` unions `<pkg>/<backend>`
# into an app build (Tier A.2), so an app depends on this piece with a plain `{ workspace = true }` —
# no per-backend feature fan-out in its own Cargo.toml.
[package.metadata.day.piece]
backends = ["appkit", "gtk", "qt", "mdc", "winui", "mock"]

[dependencies]
day-spec = { workspace = true }
day-core = { workspace = true }
day-pieces = { workspace = true }
day-reactive = { workspace = true }
linkme = { workspace = true }
day-appkit = { workspace = true, optional = true }
day-gtk = { workspace = true, optional = true }
day-qt = { workspace = true, optional = true }
day-android = { workspace = true, optional = true }
day-winui = { workspace = true, optional = true }
day-winui-sys = { workspace = true, optional = true }
gtk4 = { version = "0.11", optional = true }
objc2 = { version = "0.6", optional = true }
objc2-app-kit = { version = "0.3", optional = true, features = ["NSComboBox", "NSTextField", "NSControl", "NSView", "NSResponder"] }
objc2-foundation = { version = "0.3", optional = true, features = ["NSString", "NSNotification"] }

[build-dependencies]
day-toolchain = { workspace = true }
cc = "1"

[dev-dependencies]
day-mock = { workspace = true }

# Standalone-piece Android contribution (docs/extending.md): the day CLI reads this from
# `cargo metadata` and folds it into the app's Gradle build — the piece carries its own backend
# Java (dev.daybrite.day.piece.combobox.DayCombo), without touching day-android. A plain
# AutoCompleteTextView needs no Gradle dependency or manifest permission.
[package.metadata.day.android]
# Java/Kotlin source dir(s), relative to this crate root — added as Gradle `java.srcDir`s.
java = ["android/java"]
# Gradle dependency coordinates added to the app module (none — a framework widget).
gradle-dependencies = []
# Extra Maven repositories (URLs) for dependencies not on google()/mavenCentral().
gradle-repositories = []
