[package]
name = "day-piece-datetime"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
build = "build.rs"

# Standalone date & time pickers (docs/datepicker.md): TWO pieces — `date_picker(Signal<DayDate>)`
# and `time_picker(Signal<DayTime>)` — each realized as the platform's closest idiomatic control
# per style intent (`Compact` = field/button that summons a transient chooser; `Inline` = embedded
# calendar/clock/wheels). Two pieces rather than one combined date-time piece: a single combined
# control exists on only 3 of the 7 toolkits (NSDatePicker / UIDatePicker.dateAndTime /
# QDateTimeEdit), while separate date and time controls realize natively on all of them — combined
# selection stays portable as composition (`row((date_picker(d), time_picker(t)))`).

[features]
appkit = ["dep:day-appkit", "dep:objc2", "dep:objc2-app-kit", "dep:objc2-foundation"]
gtk = ["dep:day-gtk", "dep:gtk4"]
qt = ["dep:day-qt"]
uikit = ["dep:day-uikit", "dep:objc2", "dep:objc2-ui-kit", "dep:objc2-foundation", "dep:objc2-core-foundation"]
widget = ["dep:day-android"]        # + [package.metadata.day.android]
winui = ["dep:day-winui", "dep:day-winui-sys"]
arkui = ["dep:day-arkui", "dep:day-arkui-sys"]  # + build.rs compiles src/datetime-arkui.cpp

# Backends this piece carries a native renderer for — ALL seven (the first external piece to close
# the arkui gap). `day build` unions `<pkg>/<backend>` into an app build (Tier A.2).
[package.metadata.day.piece]
backends = ["appkit", "gtk", "qt", "uikit", "widget", "winui", "arkui"]

[dependencies]
day-spec = { workspace = true }
day-core = { workspace = true }
day-pieces = { workspace = true }
day-reactive = { workspace = true }
linkme = { workspace = true }
day-appkit = { workspace = true, optional = true }
day-gtk = { workspace = true, optional = true }
day-qt = { workspace = true, optional = true }
day-uikit = { workspace = true, optional = true }
day-android = { workspace = true, optional = true }
day-winui = { workspace = true, optional = true }
day-winui-sys = { workspace = true, optional = true }
day-arkui = { workspace = true, optional = true }
day-arkui-sys = { workspace = true, optional = true }
gtk4 = { version = "0.11", optional = true }
objc2 = { version = "0.6", optional = true }
objc2-app-kit = { version = "0.3", optional = true, features = ["NSDatePicker", "NSDatePickerCell", "NSControl", "NSView", "NSResponder"] }
objc2-ui-kit = { version = "0.3", optional = true, features = ["UIDatePicker", "UIControl", "UIView", "UIResponder"] }
objc2-foundation = { version = "0.3", optional = true, features = ["NSString", "NSDate", "NSCalendar", "NSTimeZone"] }
objc2-core-foundation = { version = "0.3", optional = true, features = ["CFCGTypes"] }

[build-dependencies]
day-toolchain = { workspace = true }
cc = "1"

[dev-dependencies]
day-mock = { workspace = true }

# Standalone-piece Android contribution (docs/extending.md): the Material dialog launcher + inline
# widget factory ship with THIS crate. Material is already in the app template, but the piece
# declares its own dependency so a standalone app that trims the template still builds.
[package.metadata.day.android]
java = ["android/java"]
# A theme overlay fixing MaterialTimePicker's dialog buttons under a non-AppCompat activity
# (see android/res/values/themes.xml) — the reference use of piece-shipped Android resources.
res = ["android/res"]
gradle-dependencies = ["com.google.android.material:material:1.14.0"]
gradle-repositories = []
permissions = []
