[package]
name = "day-piece-lottie"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

# A standalone Day Piece rendering a Lottie animation — iOS + Android only. Like the other pieces it
# carries BOTH its cross-platform front-end (Rust) and its per-toolkit backend, without touching
# any core day crate. It is the reference for a piece that pulls an EXTERNAL native package:
#   iOS      — the lottie-ios SwiftPM package (via the new [package.metadata.day.ios] mechanism)
#   Android  — com.airbnb.android:lottie (via the existing [package.metadata.day.android] mechanism)
# See docs/extending.md + docs/lottie.md.

[features]
uikit = ["dep:day-uikit", "dep:objc2", "dep:objc2-foundation", "dep:objc2-ui-kit"]
mdc = ["dep:day-android"]

# Backends this piece carries a native-renderer [features] entry for. `day` unions `<pkg>/<backend>`
# into an app build (Tier A.2), so an app depends on this piece with a plain `{ workspace = true }` —
# no per-backend feature fan-out in its own Cargo.toml. (Lottie is iOS/Android only.)
[package.metadata.day.piece]
backends = ["uikit", "mdc"]

[dependencies]
day-spec = { workspace = true }
day-core = { workspace = true }
day-pieces = { workspace = true }
day-reactive = { workspace = true }
linkme = { workspace = true }
day-uikit = { workspace = true, optional = true }
day-android = { workspace = true, optional = true }
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", optional = true, features = ["NSString"] }
objc2-ui-kit = { version = "0.3", optional = true, features = ["UIView", "UIResponder"] }

[dev-dependencies]
day-mock = { workspace = true }

# --- Android backend contribution (docs/extending.md) ---
# The day CLI reads this from `cargo metadata` and folds it into the app's Gradle build.
[package.metadata.day.android]
java = ["android/java"]
# Airbnb's Lottie for Android (on mavenCentral) — the native animation renderer.
gradle-dependencies = ["com.airbnb.android:lottie:6.6.0"]

# --- iOS backend contribution (docs/extending.md — the mechanism this piece introduces) ---
# `day build` (ios-uikit) reads this from `cargo metadata`, generates a local SwiftPM package that
# depends on these `swift-packages` and compiles the `swift` shim sources, and links it into the app.
[package.metadata.day.ios]
# Swift shim source dir(s), relative to this crate root — compiled into the app's Swift build.
swift = ["ios/swift"]
# SwiftPM package dependencies. `products` are the library products to link from each package.
swift-packages = [
    { url = "https://github.com/airbnb/lottie-ios", from = "4.5.0", products = ["Lottie"] },
]
